[package]
name = "h3_gpd"
version = "0.1.0"
authors = ["Andrew Thompson <andrew@hijacked.us>"]
categories = ["science", "data-structures"]
edition = "2018"
exclude = ["/test/*"]
readme = "README.md"
keywords = ["geo", "geography", "geospatial", "gis", "h3", "population"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vagabond/h3_gpd"
description = """
Generate H3Set data using the "Gridded Population of the World (GPW), v4" dataset (https://sedac.ciesin.columbia.edu/data/set/gpw-v4-population-density-rev11).
"""

[dependencies]
geo = {version = "0.23.0" }
num-traits = {version = "0.2.15"}
bincode = {version = "1.3.3"}
hextree = {version = "0.1", features = ["serde-support"]}
clap = {version = "3.2.20", features = ["derive"]}
hyper = {version = "0.14.23", features = ["server", "http1", "full"]}
tokio = {version = "1.24.1", features = ["full"]}
bytes = "1.3.0"
http-body-util = "0.1.0-rc.2"
